[project]
name = "griptape-nodes-library-topazlabs"
version = "0.1.0"
description = "Topaz Labs nodes for Griptape"
authors = [
    {name = "Kyle Roche", email = "kyle@example.com"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "griptape-nodes",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["topazlabs"]
